# cfa-immunization-uptake-projection

./: .README.md.swp  .gitignore  .gitignore_global  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Snakefile  dagster_defs.py  mise.toml  mkdocs.yaml  pyproject.toml  rf_nis_eda.py  test.ipynb
.github/workflows/: mkdocs.yaml  run_pytest.yaml
R/: build_projection_model.r  build_projection_model_opt_plot.r  build_scaling_model.r  evaluate_projection.r  evaluate_scaling.r  generate_projections.R  get_uptake_data.r  interpolate_dates.r  retrospective_evaluate.r
config/: config.yaml
data/: NIS_2023-24.csv  NIS_2023-24.csv:Zone.Identifier  State_Name_Key.csv  USA_Name_Key.csv  get_nis.py  nis.csv  nis_flu_national.csv  nis_flu_states.csv  raw.parquet
docs/: analytical_plan.md  api.md  gam.Rmd  gam.md  index.md  lpl.md  model_details.md  model_development.md  model_journal.md  random_forest.md  two-logistics.md
incident_regression/: pyproject.toml
ipynbs/: grb.ipynb  param_check.ipynb  residuals.ipynb
iup/: .README.md.swp  __init__.py  all_objects.py  build_projection_model.py  diagnostics.py  eval.py  eval_objects.py  eval_projections.py  get_projections.py  get_real_time_projections.py  get_uptake_data.py  make_projections.py  models.py  plot_projections.py  utils.py
scratch/: model_fitting.py  models.py
scripts/: .gitignore  .master_script.py.swp  config_full.yaml  config_lpl.yaml  config_lsl.yaml  config_ppr.yaml  config_pprr.yaml  config_psp.yaml  config_psr.yaml  config_template.yaml  config_vignette.yaml  config_vignette_lpl.yaml  config_vignette_rf.yaml  demo_incident.ipynb  demo_numpyro.py  demo_rf.ipynb  demo_rf.py  demo_rf_ci.ipynb  describe_data.py  diagnostics.py  eval.py  evaluation_script.py  evaluation_script.r  figs_demo.py  figs_manuscript.py  figs_panels.py  fit.py  fit_interaction_diagnostics.py  forecast.py  gam_covid.R  gam_demo.py  gam_eda.R  get_forecast_dates.py  get_forecast_starts.py  get_run_id.py  grb_eda.py  lmer_eda.R  lpl_eda.R  lpl_eda.ipynb  main.py  (+19 more)
scripts/gam/: gam_covid.R  gam_eda.R  gam_k.R  gam_scipy.py  spline_viz.py
tests/: .test_all_objects.py.swp  conftest.py  test.py  test_LL_model.py  test_LPL_model.py  test_RF_model.py  test_all_objects.py  test_data.py  test_data_cleaning.py  test_evaluation.py  test_generic_model.py  test_hill_model.py  test_linear_incident_uptake_model.py  test_model_building.py  test_placeholder.py  test_rf.py  test_season.py  test_uptake_data.py  test_utils.py
vcf/: __init__.py
