[project]
name = "iup"
version = "0.1.0"
description = ""
authors = [
    { name = "Scott Olesen", email = "ulp7@cdc.gov" },
    { name = "Edward Schrom", email = "tec0@cdc.gov" },
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "polars>=1.7.1,<2",
    "numpy>=2.1.1,<3",
    "datetime>=5.5",
    "scikit-learn>=1.5.2,<2",
    "altair>=5.4.1,<6",
    "vl-convert-python>=1.7.0,<2",
    "pyyaml>=6.0.2,<7",
    "pytest>=8.3.3,<9",
    "nisapi>=1.0.0",
    "numpyro>=0.16.1,<0.17",
    "jax>=0.5.0,<0.6",
    "typing-extensions>=4.12.2,<5",
    "arviz>=0.21.0,<0.22",
    "ipympl>=0.9.7,<0.10",
    "pandas>=2.2.3,<3",
    "pathlib>=1.0.1,<2",
    "streamlit>=1.45.1,<2",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
gam = ["scikit-fda>=0.10.1"]

[tool.uv]
[tool.uv.sources]
nisapi = { git = "https://github.com/CDCgov/nis-py-api" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "ipykernel>=7.1.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
]
mkdocs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
]
