[tool.poetry]
name = "incident-regression"
version = "0.1.0"
description = ""
authors = ["Edward Schrom <tec0@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.7.1"
numpy = "^2.1.1"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
